--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,34 +2,72 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .jumbotron {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
-<body>
-
-<h1>My Tool Store</h1>
-
-<table id="products">
+<body class="container container-fluid">
+<div class="jumbotron jumbotron-fluid row">
+    <h1 class="display-4">My Tool Store</h1>
+</div>
+<div class="row">
+<table id="products" class="table table-dark">
     <thead>
         <tr>
-            <th>Title</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
+            <th scope="col">Title</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+            <th scope="col">Categories</th>
         </tr>
     </thead>
-    <tbody id="insertProducts"></tbody>
+    <tbody id="insertProducts">
+    </tbody>
+    <button type="button" class="btn btn-primary btn-lg btn-block">Update Tools</button>
 </table>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 <script>
 (function() {
     "use strict";
     // TODO: Create an ajax GET request for /data/inventory.json
-    console.log($.get('data/inventory.json'));
+        $.get('data/inventory.json');
     // TODO: Take the data from inventory.json and append it to the products table
     //       HINT: Your data should come back as a JSON object; use console.log() to inspect
     //             its contents and fields
     //       HINT: You will want to target #insertProducts for your new HTML elements
+
+
+    function updateTools() {
+         var table = "";
+
+            $.get('data/inventory.json').done(function(data) {
+
+                data.forEach(function(element) {
+                    table += "<tr>";
+                    table +=     "<td>" + element.title + "</td>";
+                    table +=     "<td>" + element.quantity + "</td>";
+                    table +=     "<td>" + element.price + "</td>";
+                    table +=     "<td>" + element.categories + "</td>";
+                    table += "</tr>";
+
+                    $('#insertProducts').html(table);
+                }); //end of forEach()
+
+            }); //end of .get()
+
+    }// end of updateTools()
+
+    $('button').click(updateTools);
+
+
 })();
 </script>
 
